--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.17.2"
+    "@tailwindcss/vite": "^4.2.0",
+    "astro": "^5.17.2",
+    "tailwindcss": "^4.2.0"
   }
 }
