--- a/package.json
+++ b/package.json
@@ -9,8 +9,6 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.2.0",
-    "astro": "^5.17.2",
-    "tailwindcss": "^4.2.0"
+    "astro": "^5.17.2"
   }
 }
